[gd_scene load_steps=28 format=3 uid="uid://cfa1pp2khtna8"]

[ext_resource type="Script" path="res://main.gd" id="1_g1irq"]
[ext_resource type="Texture2D" uid="uid://d3feptx88eswe" path="res://assets/truck_interior/order_walkup_firsthalf_1.png" id="2_6eull"]
[ext_resource type="Texture2D" uid="uid://ddpeow8ctmnhx" path="res://assets/truck_interior/order_walkup_firsthalf_2.png" id="3_40duv"]
[ext_resource type="PackedScene" uid="uid://cb4bp5deiwpic" path="res://assets/cutscene_scenes/quarterly_report.tscn" id="3_hv65v"]
[ext_resource type="PackedScene" uid="uid://4kvibjmvkh4b" path="res://assets/cutscene_scenes/game_over.tscn" id="4_3v3a8"]
[ext_resource type="Texture2D" uid="uid://d3voh8lir4smx" path="res://assets/truck_interior/order_walkup_firsthalf_3.png" id="4_lfkhs"]
[ext_resource type="Texture2D" uid="uid://ce7kfkyhix3gn" path="res://assets/truck_interior/order_walkup_firsthalf_4.png" id="5_iwvww"]
[ext_resource type="Texture2D" uid="uid://djnk7p54ioj12" path="res://assets/truck_interior/order_walkup_firsthalf_5.png" id="6_fcjci"]
[ext_resource type="Texture2D" uid="uid://vw5ma4p7ju2b" path="res://assets/truck_interior/order_walkup_firsthalf_6.png" id="7_lp8r3"]
[ext_resource type="Texture2D" uid="uid://b7dkbg212hmq7" path="res://assets/truck_interior/truck_interior_v2.png" id="8_ggke1"]
[ext_resource type="PackedScene" uid="uid://b7gswtspo7oa4" path="res://WalkPause.tscn" id="9_8c8p5"]
[ext_resource type="FontFile" uid="uid://1rn8mmdkkrmj" path="res://assets/fonts/icecream_analog.ttf" id="10_byept"]
[ext_resource type="FontFile" uid="uid://ie8mvobpepsw" path="res://assets/fonts/KarenFat.ttf" id="11_djkbk"]
[ext_resource type="Script" path="res://score_label.gd" id="12_2e2fe"]
[ext_resource type="PackedScene" uid="uid://d3wphvmf0fykx" path="res://number_snowflakes.tscn" id="13_w2te4"]
[ext_resource type="PackedScene" uid="uid://c80uv33pm8qys" path="res://tower.tscn" id="14_gmms0"]
[ext_resource type="PackedScene" uid="uid://cj3urrn8xrb70" path="res://target.tscn" id="15_gdfsq"]
[ext_resource type="Texture2D" uid="uid://1my10olw11of" path="res://assets/icecream/cone.png" id="16_cwrmj"]
[ext_resource type="PackedScene" uid="uid://fq3a7ac4jr00" path="res://scoop.tscn" id="17_ccjbw"]
[ext_resource type="PackedScene" uid="uid://dlc02e3aojldh" path="res://dropper.tscn" id="18_vmu3t"]
[ext_resource type="Texture2D" uid="uid://dinis6q3gmlf6" path="res://assets/cutscene/trees.png" id="19_70805"]
[ext_resource type="Texture2D" uid="uid://doxatnpbwawyu" path="res://assets/truck_interior/arm.png" id="20_rxn4a"]
[ext_resource type="AudioStream" uid="uid://dql0e6hxgcy0t" path="res://sfx/plop.wav" id="21_m1n0f"]
[ext_resource type="AudioStream" uid="uid://c2f6gfvdocxb6" path="res://assets/music/Hurt_and_heart.ogg" id="21_stefu"]
[ext_resource type="AudioStream" uid="uid://lo3ysa2rb5ru" path="res://assets/music/joyful.ogg" id="22_v2x15"]
[ext_resource type="AudioStream" uid="uid://c0umhavo4otn3" path="res://assets/music/Maniac.ogg" id="23_r8jn0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rshw3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6eull")
}, {
"duration": 1.0,
"texture": ExtResource("3_40duv")
}, {
"duration": 1.0,
"texture": ExtResource("4_lfkhs")
}, {
"duration": 1.0,
"texture": ExtResource("5_iwvww")
}, {
"duration": 1.0,
"texture": ExtResource("6_fcjci")
}, {
"duration": 1.0,
"texture": ExtResource("7_lp8r3")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Main" type="Node2D" node_paths=PackedStringArray("target", "dropper", "main_scoop", "tower")]
script = ExtResource("1_g1irq")
target = NodePath("Tower/Target")
dropper = NodePath("Dropper")
main_scoop = NodePath("Scoop")
tower = NodePath("Tower")
scoop_scene = ExtResource("17_ccjbw")
success_scene = ExtResource("3_hv65v")
fail_scene = ExtResource("4_3v3a8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = -427.0
offset_right = 381.0
offset_bottom = -9.0
color = Color(0.0666667, 0.054902, 0.105882, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 53)

[node name="Score" type="Label" parent="Camera2D"]
unique_name_in_owner = true
z_index = 4
offset_left = 64.0
offset_top = -26.0
offset_right = 112.0
offset_bottom = -3.0
theme_override_colors/font_color = Color(0.0941176, 0.0784314, 0.145098, 1)
theme_override_fonts/font = ExtResource("11_djkbk")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
script = ExtResource("12_2e2fe")

[node name="Snowflakes" parent="Camera2D" instance=ExtResource("13_w2te4")]
unique_name_in_owner = true
position = Vector2(92, -5)

[node name="OverallScore" type="Label" parent="Camera2D"]
visible = false
z_index = 3
offset_left = 67.0
offset_top = 56.0
offset_right = 115.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0.14902, 0.360784, 0.258824, 1)
theme_override_fonts/font = ExtResource("11_djkbk")
theme_override_font_sizes/font_size = 16
text = "$99999"

[node name="Timer" type="Label" parent="Camera2D"]
unique_name_in_owner = true
visible = false
z_index = 2
offset_left = -118.0
offset_top = 74.0
offset_right = -80.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0.388235, 0.780392, 0.301961, 1)
theme_override_fonts/font = ExtResource("10_byept")
theme_override_font_sizes/font_size = 8
text = "1:23"
horizontal_alignment = 1

[node name="WalkStart" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(160, 99)
sprite_frames = SubResource("SpriteFrames_rshw3")

[node name="WalkPause" parent="." instance=ExtResource("9_8c8p5")]
visible = false

[node name="Scoop" parent="." instance=ExtResource("17_ccjbw")]
position = Vector2(167, 10)

[node name="Cone" type="Sprite2D" parent="."]
position = Vector2(165, 81)
texture = ExtResource("16_cwrmj")

[node name="Arm" type="Sprite2D" parent="Cone"]
z_index = 2
position = Vector2(-14, 19)
texture = ExtResource("20_rxn4a")

[node name="BrokenTruck" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(180, 75)
texture = ExtResource("19_70805")

[node name="Plop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_m1n0f")
volume_db = 10.0

[node name="Music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_stefu")

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_v2x15")

[node name="Music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_r8jn0")

[node name="Dropper" parent="." node_paths=PackedStringArray("scoop") instance=ExtResource("18_vmu3t")]
position = Vector2(167, 15)
scoop = NodePath("../Scoop")

[node name="Tower" parent="." instance=ExtResource("14_gmms0")]
position = Vector2(165, 72)

[node name="Target" parent="Tower" node_paths=PackedStringArray("falling_scoop") instance=ExtResource("15_gdfsq")]
position = Vector2(-4.6136, 16.2043)
falling_scoop = NodePath("../../Scoop")

[node name="TruckInterior" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(160, 0)
texture = ExtResource("8_ggke1")
